# CMakeList.txt : CMake project for Centralized Home System with NFC, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "Centralized Home System with NFC.cpp" "Centralized Home System with NFC.h")

# TODO: Add tests and install targets if needed.
